--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-
 body {
     background: url(images/rpsBackground.jpg);
     background-size: cover;
 }
-
-
 
 .container {
     display: flex;
@@ -62,12 +59,12 @@ body {
     display: flex;
     font-size: 30px;
     font-weight: bold;
-    color: pink;
+    color: rgb(136, 16, 216);
 }
 
 [data-key="player"] {
     color: red;
-    border-color: pink;
+    border-color: rgb(136, 16, 216);
     border-style: solid;
     border-width: 5px;
     padding: 0px 35px;
@@ -76,7 +73,7 @@ body {
 
 [data-key="opponent"] {
     color: blue;
-    border-color: pink;
+    border-color: rgb(136, 16, 216);
     border-style: solid;
     border-width: 5px;
     padding: 0px 35px;
