--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 [data-key="rock"] {
-    content: url(/images/rock.png);
+    content: url(images/rock.png);
     max-width: 20%;
     max-height: 20%;
     position: fixed;
